--- a/app/views/seasonal_rates/index.html.erb
+++ b/app/views/seasonal_rates/index.html.erb
@@ -7,13 +7,13 @@
         <dt><%= "Entre #{l rate.start_date} e #{l rate.end_date}: #{number_to_currency rate.price}" %></dt>
         <% unless rate.start_date.past? %>
           <dd>
-            <%= link_to 'Editar', edit_inn_room_seasonal_rate_path(@inn, @room, rate) %>
+            <%= link_to 'Editar', edit_seasonal_rate_path(rate) %>
           </dd>
         <% end %>
       <% end %>
     </dl>
   <% else %>
     <p>Não existem Preços de Temporada para este quarto ainda.</p>
-    <p>Você pode criar um <%= link_to 'clicando aqui', new_inn_room_seasonal_rate_path(@inn, @room) %>.</p>
+    <p>Você pode criar um <%= link_to 'clicando aqui', new_room_seasonal_rate_path(@room) %>.</p>
   <% end %>
 </div>
