--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -12,9 +12,9 @@
         <p class="status-inactive">Quarto indisponível para reservas</p>
       <% end %>
       <div class="owner-buttons">
-        <%= link_to 'Editar Quarto', edit_inn_room_path(@inn, @room), class: 'page-btn' %>
-        <%= link_to 'Adicionar Preço de Temporada', new_inn_room_seasonal_rate_path(@inn, @room), class: 'page-btn' %>
-        <%= link_to 'Ver Preços de Temporada deste quarto', inn_room_seasonal_rates_path(@inn, @room), class: 'page-btn' %>
+        <%= link_to 'Editar Quarto', edit_room_path(@room), class: 'page-btn' %>
+        <%= link_to 'Adicionar Preço de Temporada', new_room_seasonal_rate_path(@room), class: 'page-btn' %>
+        <%= link_to 'Ver Preços de Temporada deste quarto', room_seasonal_rates_path(@room), class: 'page-btn' %>
       </div>
     </section>
   <% end %>
@@ -48,7 +48,7 @@
   </div>
 
   <div id="reservation-button">
-    <%= link_to 'Reservar', new_inn_room_reservation_path(@inn, @room), class: 'page-btn' %>
+    <%= link_to 'Reservar', new_room_reservation_path(@room), class: 'page-btn' %>
   </div>
 
   <% if user_signed_in? && @inn.user == current_user %>
