--- a/app/views/users/my_reservations.html.erb
+++ b/app/views/users/my_reservations.html.erb
@@ -1,12 +1,12 @@
 <h2 class="section-title">Minhas Reservas</h2>
 
 <% @reservations.each do |reservation| %>
-  <h3 class="section-title"><%= reservation.room.inn.brand_name %></h3>
+  <h3 class="section-title"><%= link_to "Reserva #{reservation.code}", reservation %></h3>
+  <p><%= "Pousada: #{reservation.room.inn.brand_name}" %></p>
   <p><%= "Quarto #{reservation.room.name}" %></p>
   <p><%= "Check-in: #{I18n.l(reservation.start_date)} - #{reservation.room.inn.checkin_time.to_fs(:time)}" %></p>
   <p><%= "Check-out: #{I18n.l(reservation.end_date)} - #{reservation.room.inn.checkout_time.to_fs(:time)}" %></p>
   <p><%= "Valor: #{number_to_currency reservation.price}" %></p>
-  <p><%= "Código da reserva: #{reservation.code}" %></p>
   <p><%= "Status da reserva: #{I18n.t("status.#{reservation.status}")}" %></p>
   <% unless reservation.canceled? || reservation.active? || reservation.finished? %>
     <%= button_to "Cancelar Reserva de #{reservation.room.name}", cancel_reservation_path(reservation), method: :post %>
