add inn reviews list page for hosts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
           <% if current_user.host? %>
             <%= link_to 'Minha Pousada', my_inn_path, class: 'nav-button' %>
             <%= link_to 'Reservas', my_inn_reservations_path, class: 'nav-button' %>
+            <%= link_to 'Avaliações', my_inn_reviews_path, class: 'nav-button' %>
           <% end %>
           <% if current_user.regular? %>
             <%= link_to 'Minhas Reservas', my_reservations_path, class: 'nav-button' %>
