add changes to navigation bar
change the new_user_registration link
in the navigation bar from 'Seja um
Pousadeiro' to 'Criar uma conta', to
avoid confusion for non-host users on
how to create a new account.

add new locale attribute names for user
model

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
           <% end %>
           <%= button_to 'Sair', destroy_user_session_path, method: :delete, class: 'nav-button btn-to' %>
         <% else %>
-          <%= link_to 'Seja um Pousadeiro', new_user_registration_path, class: 'nav-button' %>
+          <%= link_to 'Criar uma conta', new_user_registration_path, class: 'nav-button' %>
           <%= link_to 'Entrar', new_user_session_path, class: 'nav-button' %>
         <% end %>
       </div>
