add content type restriction to photos
add validation to prevent the host from
uploading files that are not .jpg, .jpeg
or .png.

--- a/app/views/albums/new_inn_pictures.html.erb
+++ b/app/views/albums/new_inn_pictures.html.erb
@@ -1,5 +1,11 @@
 <h2 class="section-title"><%= "Adicionar fotos em " + @inn.brand_name %></h2>
 
+<% if @album.errors.any? %>
+  <% @album.errors.full_messages.each do |msg| %>
+    <%= msg %>
+  <% end %>
+<% end %>
+
 <p>Formatos permitidos de imagem: JPEG e PNG</p>
 <p>As imagens devem ser relacionadas a sua pousada</p>
 
