add invoice model to app
create the invoice model to handle all price calculations
post checkout. updated rental price, total consumables
price and final reservation price logic now are located
at the invoice model.

its instance is created at the moment the checkout is
created, when the host is not suposed to make any
further changes to the reservation.

unit tests to ensure proper price calculations will
follow in future commits.

--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -5,7 +5,12 @@
 <p><%= "Check-out: #{I18n.l(@reservation.end_date.to_date)} - #{@inn.checkout_time.to_fs(:time)}" %></p>
 <p><%= "Hóspedes: #{@reservation.number_guests}" %></p>
 <p><%= "Status: #{I18n.t("status.#{@reservation.status}")}" %></p>
-<p><%= "Valor: #{number_to_currency(@reservation.price)} "%></p>
+
+<% unless @reservation.invoice.present? %>
+  <p><%= "Valor: #{number_to_currency(@reservation.price)} "%></p>
+<% else %>
+  <p><%= "Valor: #{number_to_currency(@reservation.invoice.calculate_total_reservation_price)} "%></p>
+<% end %>
 <% if @reservation.review.present? %>
   <p><%= "Sua nota para estadia: #{@reservation.review.rating}" %></p>
   <p><%= "Seu comentário sobre a estadia: #{@reservation.review.comment}" %></p>
